[tool.poetry]
name = "full_me"
version = "0.1.0"
description = ""
authors = ["dalaian <dalaian@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.2"
black = "^24.4.2"
pytz = "^2024.1"
pyyaml = "^6.0.1"
pytest-playwright = "^0.5.0"
flake8 = "^7.0.0"
allure-pytest = "^2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
